# 3D-simulation

./: .gitignore  CMakeLists.txt  README.md  SimulationHW1Key  SimulationHW1Key.pub
include/: Camera.h  EBO.h  Shader.h  VAO.h  VBO.h  glad.h  texture.h
resources/: default.frag  default.vert
src/: Camera.cpp  EBO.cpp  Shader.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  texture.cpp
